componente funcionando no uber clone

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -13,11 +13,13 @@
   "value": "Value",
   "coin": "R$",
   "currentBalance": "View current balance",
+  "currentBalanceMsg": "(current balance)",
   "totalByPeriod": "Balance by period",
   "total": "Total",
   "send": "Send",
   "outstanding_debt": "Outstanding Debt",
   "blank_state_message": "We didn't found any data for this filter",
+  "blank_state_message_filter": "We couldn't find any records for the selected date. Use the filter (top right) to choose another date.",
   "reportDetail": "Period details",
   "yearReport": "Gain report",
   "typeService": "Service type",
