--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -13,11 +13,13 @@
   "value": "Valor",
   "coin": "R$",
   "currentBalance": "Saldo atual",
+  "currentBalanceMsg": "(em carteira)",
   "totalByPeriod": "Saldo do período",
   "total": "Total",
   "send": "Enviar",
   "outstanding_debt": "Dívida pendente",
   "blank_state_message": "Não encontramos registros para o filtro utilizado",
+  "blank_state_message_filter": "Não encontramos registros para a data selecionada. Utilize o filtro (canto superior direito) para escolher outra data.",
   "reportDetail": "Detalhes do período",
   "yearReport": "Relatório de ganhos",
   "typeService": "Tipo do serviço",
