layout inicial: adicionar saldo na conta

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -38,5 +38,6 @@
   "balanceOf": "Balance of",
   "transactions": "Transactions",
   "help": "Ajuda",
-  "loading_message": "Loading..."
+  "loading_message": "Loading...",
+  "add_balance": "Add Balance"
 }
