--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -38,5 +38,6 @@
   "balanceOf": "Saldo de",
   "transactions": "Transações",
   "help": "Ajuda",
-  "loading_message": "Carregando..."
+  "loading_message": "Carregando...",
+  "add_balance": "Adicionar Saldo"
 }
