correcao no servicos

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -32,7 +32,7 @@
   "racings": "Racings",
   "racing": "Racing",
   "onlineHours": "Online hours",
-  "cashTravels": "Cash travel",
+  "cashTravels": "in Cash",
   "currentAccount": "Current account statement",
   "recentTransaction": "Recent transactions",
   "balanceOf": "Balance of",
