--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -32,7 +32,7 @@
   "racings": "Corridas",
   "racing": "Corrida",
   "onlineHours": "Horas online",
-  "cashTravels": "Viagens em dinheiro",
+  "cashTravels": "em dinheiro",
   "currentAccount": "Extrato de conta corrente",
   "recentTransaction": "Transações recentes",
   "balanceOf": "Saldo de",
