--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -58,5 +58,18 @@
 	"save": "Save",
 	"cumulated_balance_monthly": "Monthly",
 	"infoTotal": "Saldo total acumulado de indicação",
-	"infoMonthly": "Saldo mensal acumulado de indicação" 
+	"infoMonthly": "Saldo mensal acumulado de indicação",
+	"card": "Card",
+	"card_success": "Card payment successful.",
+	"card_error": "Card error",
+	"billet_error": "Error generating ticket",
+	"confirm_billet_value": "Are you sure you want to generate a boleto for",
+	"billet_addition": "There will be an increase in",
+	"yes": "Yes",
+	"pay_with_card": "Pay with card",
+	"confirm_card_value": "Are you sure you want to pay the amount of",
+	"in_card": "In the card",
+	"billet_copied": "Boleto copied successfully!",
+	"new_billet_success": "Boleto generated successfully. It was sent to your email.",
+	"click_to_download": "Click here to download"
   }
