--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -82,8 +82,13 @@
 	"req_pix_info_1": "Copy the code below OR scan the QR code on the provider's APP",
 	"req_pix_info_2": "Open your bank's app and choose Pix Copy and Paste OR QR code",
 	"req_pix_info_3": "Paste the code or read the QR code on the provider's app, check the information and complete the payment",
-	"pix_info_1": "Copy the code below",
+	"pix_info_1": "Code",
 	"pix_info_2": "Open your bank's app and choose Pix Copia e Cola",
 	"pix_info_3": "Paste the code, check the information and complete the payment",
-	"pix_qr_info": "Ask the customer to open the banking app, copy the code available in their app OR read the QR Code below."
+	"pix_qr_info": "Ask the customer to open the banking app, copy the code available in their app OR read the QR Code below.",
+	"payment_made": "Have you already made the payment?",
+	"check_payment": "Check Payment",
+	"copy_pix": "Copy Pix",
+	"attention": "Attention",
+	"pix_payment": "Pix Payment"
   }
