fix qr code pix

--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -66,6 +66,7 @@
 	"confirm_billet_value": "Tem certeza que deseja gerar um boleto no valor de",
 	"billet_addition": "Haverá um acréscimo de",
 	"yes": "Sim",
+	"no": "Não",
 	"pay_with_card": "Pagar com cartão",
 	"confirm_card_value": "Tem certeza que deseja pagar o valor de",
 	"in_card": "no cartão",
@@ -79,17 +80,21 @@
 	"pix": "Pix",
 	"confirmed_pix": "O pagamento Pix foi confirmado!",
 	"pix_info": "Pague com Pix em qualquer dia e a qualquer hora! O pagamento é instantâneo, prático e pode ser feito em poucos segundos. É rápido e seguro.",
-	"req_pix_info_1": "Copie o código abaixo OU escaneie o código QR no APP do prestador",
-	"req_pix_info_2": "Abra o app do seu banco e escolha Pix Copia e Cola OU QR code",
+	"req_pix_info_1": "Copie o código abaixo ou escaneie o código QR no APP do prestador",
+	"req_pix_info_2": "Abra o app do seu banco e escolha Pix Copia e Cola ou QR code",
 	"req_pix_info_3": "Cole o código ou leia o código QR no app do prestador, confira as informações e finalize o pagamento",
 	"pix_info_1": "Código",
 	"pix_info_2": "Abra o app do seu banco e escolha Pix Copia e Cola",
 	"pix_info_3": "Cole o código, confira as informações e finalize o pagamento",
-	"pix_qr_info": "Peça para o cliente abrir o app bancário, copiar o código disponível no app dele OU ler o Código QR abaixo.",
+	"pix_qr_info": "Peça para o cliente abrir o app bancário, copiar o código disponível ou ler o Código QR abaixo.",
 	"payment_made": "Já efetuou o pagamento?",
 	"check_payment": "Verificar pagamento",
 	"copy_pix": "Copiar Pix",
 	"attention": "Atenção",
 	"pix_payment": "Pagamento Pix",
-	"payment_not_confirmed": "Não identificamos o pagamento ainda."
+	"payment_not_confirmed": "Não identificamos o pagamento ainda.",
+	"pix_problems": "Problemas com pagamento pix?",
+	"change_payment_mode": "Alterar forma de pagamento",
+	"exit_app": "Sair do aplicativo",
+	"exit_app_msg": "Você tem certeza que deseja sair do aplicativo?"
 }
