--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -66,6 +66,7 @@
 	"confirm_billet_value": "Are you sure you want to generate a boleto for",
 	"billet_addition": "There will be an increase in",
 	"yes": "Yes",
+	"no": "No",
 	"pay_with_card": "Pay with card",
 	"confirm_card_value": "Are you sure you want to pay the amount of",
 	"in_card": "In the card",
@@ -91,5 +92,9 @@
 	"copy_pix": "Copy Pix",
 	"attention": "Attention",
 	"pix_payment": "Pix Payment",
-	"payment_not_confirmed": "Payment not confirmed yet."
-  }
+	"payment_not_confirmed": "Payment not confirmed yet.",
+	"pix_problems": "Problems with pix?",
+	"change_payment_mode": "Change payment mode",
+	"exit_app": "Exit App",
+	"exit_app_msg": "Are you sure?"
+}
