--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -96,5 +96,6 @@
 	"pix_problems": "Problems with pix?",
 	"change_payment_mode": "Change payment mode",
 	"exit_app": "Exit App",
-	"exit_app_msg": "Are you sure?"
+	"exit_app_msg": "Are you sure?",
+	"payment_changed": "The payment mode has changed"
 }
