--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -97,5 +97,7 @@
 	"change_payment_mode": "Alterar forma de pagamento",
 	"exit_app": "Sair do aplicativo",
 	"exit_app_msg": "Você tem certeza que deseja sair do aplicativo?",
-	"payment_changed": "A forma de pagamento foi alterada"
+	"payment_changed": "A forma de pagamento foi alterada",
+	"add_cards": "Adicionar cartões",
+	"payment_methods": "Formas de Pagamento"
 }
