--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -108,7 +108,7 @@
 	"payment_debitCard": "Debit Card",
 	"payment_balance": "Balance",
 	"payment_billing": "Billing",
-	"payment_pix": "Pix Online",
+	"payment_gateway_pix": "Pix Online",
 	"payment_direct_pix": "Direct Pix",
 	"manage_payment_title": "Manage payment"
 }
