--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -100,5 +100,8 @@
 	"payment_changed": "The payment mode has changed",
 	"add_cards": "Add card",
 	"payment_methods": "Payment Methods",
-  	"make_widthdrawal": "Make Withdrawal"
+  	"make_widthdrawal": "Make Withdrawal",
+	"debit_active_balance": "Debit active",
+	"current_debit_active": "Current debit active",
+	"message_current_debit_active": "You have current active debt. To continue online and receive requests you must add a balance."
 }
