Funçao para deletar cartao

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -70,6 +70,9 @@
 	"pay_with_card": "Pay with card",
 	"confirm_card_value": "Are you sure you want to pay the amount of",
 	"in_card": "In the card",
+	"remove_card": "Remove card",
+	"confirm_remove_card": "Do you want to delete the selected card?",
+	"remove_card_success": "Card successfully deleted",
 	"billet_copied": "Boleto copied successfully!",
 	"new_billet_success": "Boleto generated successfully. It was sent to your email.",
 	"click_to_download": "Click here to download",
