--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -70,6 +70,9 @@
 	"pay_with_card": "Pagar com cartão",
 	"confirm_card_value": "Tem certeza que deseja pagar o valor de",
 	"in_card": "no cartão",
+	"remove_card": "Remover cartão",
+	"confirm_remove_card": "Deseja deletar o cartão selecionado?",
+	"remove_card_success": "Cartão deletado com sucesso",
 	"billet_copied": "Boleto copiado com sucesso!",
 	"new_billet_success": "Boleto gerado com sucesso. Ele foi enviado para o seu email.",
 	"click_to_download": "Clique aqui para baixar",
