--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,4 +1,7 @@
 {
+	"ok": "OK",
+	"minimumValueToCharge":"The minimum value to add balance is ",
+	"currency":"$",
 	"credit": "Credit",
 	"debit": "Debit",
 	"dateInitialError": "INITIAL DATE GREATER THAN LAST DATE",
@@ -74,7 +77,7 @@
 	"confirm_remove_card": "Do you want to delete the selected card?",
 	"remove_card_success": "Card successfully deleted",
 	"billet_copied": "Boleto copied successfully!",
-	"new_billet_success": "Boleto generated successfully. It was sent to your email.",
+	"new_billet_success": "Boleto generated successfully",
 	"click_to_download": "Click here to download",
 	"card_refused": "Card Refused",
 	"confirm_pix_value": "Are you sure you want to pay with pix the value of",
