--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -1,4 +1,7 @@
 {
+	"ok": "OK",
+	"minimumValueToCharge":"O valor mínimo para fazera adição de saldo é ",
+	"currency":"R$",
 	"credit": "Crédito",
 	"debit": "Débito",
 	"dateInitialError": "DATA INICIAL MAIOR QUE A DATA FINAL",
@@ -74,7 +77,7 @@
 	"confirm_remove_card": "Deseja deletar o cartão selecionado?",
 	"remove_card_success": "Cartão deletado com sucesso",
 	"billet_copied": "Boleto copiado com sucesso!",
-	"new_billet_success": "Boleto gerado com sucesso. Ele foi enviado para o seu email.",
+	"new_billet_success": "Boleto gerado com sucesso",
 	"click_to_download": "Clique aqui para baixar",
 	"card_refused": "Cartão Recusado",
 	"confirm_pix_value": "Tem certeza que deseja pagar com pix o valor de",
