--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -121,5 +121,6 @@
 	"payment_billing": "Billing",
 	"payment_gateway_pix": "Pix Online",
 	"payment_direct_pix": "Direct Pix",
-	"manage_payment_title": "Manage payment"
+	"manage_payment_title": "Manage payment",
+	"try_again":"An error occurred, please try again"
 }
