--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -121,5 +121,6 @@
 	"payment_billing": "Boleto",
 	"payment_gateway_pix": "Pix Online",
 	"payment_direct_pix": "Pix direto",
-	"manage_payment_title": "Gerenciar pagamento"
+	"manage_payment_title": "Gerenciar pagamento",
+	"try_again":"Ocorreu um erro, por favor tente novamente"
 }
