--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -122,5 +122,5 @@
 	"payment_gateway_pix": "Pix Online",
 	"payment_direct_pix": "Pix direto",
 	"manage_payment_title": "Gerenciar pagamento",
-	"try_again":"Ocorreu um erro, por favor tente novamente"
+	"try_again":"Ocorreu um erro, por favor tente novamente."
 }
