--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -118,5 +118,6 @@
 	"payment_billing": "Billing",
 	"payment_gateway_pix": "Pix Online",
 	"payment_direct_pix": "Direct Pix",
-	"manage_payment_title": "Manage payment"
+	"manage_payment_title": "Manage payment",
+	"document": "Document"
 }
