--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -88,12 +88,12 @@
 	"pix": "Pix",
 	"confirmed_pix": "Pix payment has been confirmed!",
 	"pix_info": "Pay with Pix any day, anytime! Payment is instant, convenient and can be done in just a few seconds. It's fast and secure.",
-	"req_pix_info_1": "Copy the code below OR scan the QR code on the provider's APP",
-	"req_pix_info_2": "Open your bank's app and choose Pix Copy and Paste OR QR code",
-	"req_pix_info_3": "Paste the code or read the QR code on the provider's app, check the information and complete the payment",
-	"pix_info_1": "Code",
-	"pix_info_2": "Open your bank's app and choose Pix Copia e Cola",
-	"pix_info_3": "Paste the code, check the information and complete the payment",
+	"req_pix_copy_or_scan": "Copy the code below OR scan the QR code on the provider's APP",
+	"req_pix_choose_or_code": "Open your bank's app and choose Pix Copy and Paste OR QR code",
+	"req_pix_info": "Paste the code or read the QR code on the provider's app, check the information and complete the payment",
+	"pix_code": "Code",
+	"pix_choose": "Open your bank's app and choose Pix Copia e Cola",
+	"pix_confirm": "Paste the code, check the information and complete the payment",
 	"pix_qr_info": "Ask the customer to open the banking app, copy the code available in their app OR read the QR Code below.",
 	"payment_made": "Have you already made the payment?",
 	"check_payment": "Check Payment",
