--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -90,12 +90,12 @@
 	"pix": "Pix",
 	"confirmed_pix": "O pagamento Pix foi confirmado!",
 	"pix_info": "Pague com Pix em qualquer dia e a qualquer hora! O pagamento é instantâneo, prático e pode ser feito em poucos segundos. É rápido e seguro.",
-	"req_pix_info_1": "Copie o código abaixo ou escaneie o código QR no APP do prestador",
-	"req_pix_info_2": "Abra o app do seu banco e escolha Pix Copia e Cola ou QR code",
-	"req_pix_info_3": "Cole o código ou leia o código QR no app do prestador, confira as informações e finalize o pagamento",
-	"pix_info_1": "Código",
-	"pix_info_2": "Abra o app do seu banco e escolha Pix Copia e Cola",
-	"pix_info_3": "Cole o código, confira as informações e finalize o pagamento",
+	"req_pix_copy_or_scan": "Copie o código abaixo ou escaneie o código QR no APP do prestador",
+	"req_pix_choose_or_code": "Abra o app do seu banco e escolha Pix Copia e Cola ou QR code",
+	"req_pix_info": "Cole o código ou leia o código QR no app do prestador, confira as informações e finalize o pagamento",
+	"pix_code": "Código",
+	"pix_choose": "Abra o app do seu banco e escolha Pix Copia e Cola",
+	"pix_confirm": "Cole o código, confira as informações e finalize o pagamento",
 	"pix_qr_info": "Peça para o cliente abrir o app bancário, copiar o código disponível ou ler o Código QR abaixo.",
 	"payment_made": "Já efetuou o pagamento?",
 	"check_payment": "Verificar pagamento",
