adicionando radiobuttom para opção de debito ou credito

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -54,6 +54,9 @@
 	"nameError": "Insert a correct value",
 	"number": "Card number",
 	"numberPlaceholder": "Card number",
+	"optionPayment": "Payment option",
+	"optionDebit": "Debit",
+	"optionCredit": "Credit",
 	"numberError": "Insert a valid card.",
 	"exp": "Exp date",
 	"expError": "Insert a valid date.",
