--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -51,6 +51,9 @@
 	"addCardTitle": "Adicionar cartão",
 	"name": "Nome",
 	"namePlaceholder": "Digite o nome cadastrado no cartão",
+	"optionPayment": "Opção de pagamento",
+	"optionDebit": "Débito",
+	"optionCredit": "Crédito",
 	"nameError": "Insira um nome válido.",
 	"number": "Número do cartão",
 	"numberPlaceholder": "Número do seu cartão",
