tratativas ao alterar forma de pagamento para cartão

--- a/src/langs/pt-BR.json
+++ b/src/langs/pt-BR.json
@@ -109,7 +109,10 @@
 	"change_payment_mode": "Alterar forma de pagamento",
 	"exit_app": "Sair do aplicativo",
 	"exit_app_msg": "Você tem certeza que deseja sair do aplicativo?",
+	"warning": "Aviso",
 	"payment_changed": "A forma de pagamento foi alterada",
+	"payment_changed_success": "A forma de pagamento foi alterada e paga com sucesso.",
+	"payment_changed_error": "Houve um erro ao processar o pagamento. Por favor, tente novamente.",
 	"add_cards": "Adicionar cartões",
 	"payment_methods": "Formas de Pagamento",
   	"make_widthdrawal": "Solicitar Saque",
